frontend/src/assets/main.css
@font-face {
  font-family: 'Cooper';
  src: url('/src/assets/fonts/CooperBlackStd.otf'); 
}

:root {
  --color-theme: rgb(30, 144, 255);  /* dodgerblue */
}
* {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}
html {
  font-family: 'Helvetica', sans-serif;
  font-weight: var(--font-weight-normal);
  line-height: var(--line-height-normal);
}
html,
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

a {
  text-decoration: none;
  transition: 0.4s;
}
@media (max-width: 768px) {
  html,
  body {
    /* prevent iOs horiz scroll */
    position: relative;
  }
}

